changed header image

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@ layout: compress
       <section class="bg-dark-30 bg-dark showcase-page-header module parallax-bg" data-background="assets/images/Cover-01-2.jpg" id="intro">
         <div class="titan-caption container">
           <div class="caption-content">
-            <div class="font-alt mb-30 titan-title-size-1"><img src="assets/images/ExpoLogo.svg" style="width: 500px" /></div>
-            <div class="font-alt mb-40 titan-title-size-4">2019 Central Wisconsin<br />Lawn and Garden Show</div>
+            <div class="font-alt mb-30 titan-title-size-1"><img src="assets/images/innkeepersheader.jpg" style="width: 500px" /></div>
+            <div class="font-alt mb-40 titan-title-size-4">Central Wisconsin Innkeepers<br />Careers</div>
             <div class="font-alt mb-30 titan-title-size-2">March 16th & 17th, 2019</div>
             <p>Saturday: 10:00AM - 6:00PM<br />
             Sunday: 10:00AM - 3:00PM</p>
