working on headed

--- a/index.html
+++ b/index.html
@@ -63,15 +63,13 @@ layout: compress
           </div>
         </div>
       </nav>
-      <section class="bg-dark-30 bg-dark showcase-page-header module parallax-bg" data-background="assets/images/Cover-01-2.jpg" id="intro">
+      <section class="bg-dark-30 bg-dark showcase-page-header module parallax-bg" data-background="assets/images/innkeepersheader.jpg" id="intro">
         <div class="titan-caption container">
           <div class="caption-content">
-            <div class="font-alt mb-30 titan-title-size-1"><img src="assets/images/innkeepersheader.jpg" style="width: 500px" /></div>
+            <!--<div class="font-alt mb-30 titan-title-size-1"><img src="assets/images/innkeepersheader.jpg" style="width: 500px" /></div>-->
             <div class="font-alt mb-40 titan-title-size-4">Central Wisconsin Innkeepers<br />Careers</div>
-            <div class="font-alt mb-30 titan-title-size-2">March 16th & 17th, 2019</div>
-            <p>Saturday: 10:00AM - 6:00PM<br />
-            Sunday: 10:00AM - 3:00PM</p>
-            <p>Admission is $6 for adults or two for $10 and free for children 12 and under.</p>
+
+            <p>Click on any of our member logos to find what they're currently hiring for!</p>
             <p>
               Each admission enters you for a chance to win the ultimate lawn and garden package with additional tickets available to purchase to better your chances to win.
             </p>
