--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: compress
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
-    <title>2019 Central Wisconsin Garden Expo</title>
+    <title>CW Hotel & Lodging Association</title>
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/favicon-16x16.png">
@@ -49,16 +49,11 @@ layout: compress
       <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
         <div class="container">
           <div class="navbar-header">
-            <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#custom-collapse"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a class="navbar-brand section-scroll" href="#intro"><i class="cwlawngarden-leaf"></i> CW Lawn &amp; Garden</a>
+            <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#custom-collapse"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a class="navbar-brand section-scroll" href="#intro"><i class="cwlawngarden-leaf"></i> CW Hotel &amp; Lodging Association</a>
           </div>
           <div class="collapse navbar-collapse" id="custom-collapse">
             <ul class="nav navbar-nav navbar-right">
-              <li><a class="section-scroll" href="#sponsors">Sponsors</a></li>
-              <li><a class="section-scroll" href="#exhibitors">Featured Exhibitors</a></li>
-              <li><a class="section-scroll" href="#about">About</a></li>
-              <li><a class="section-scroll" href="#seminars">Seminars</a></li>
-              <li><a class="section-scroll" href="#farmers">Farmer's Market</a></li>
-              <li><a class="section-scroll" href="#sign-up">Become a Vendor</a></li>
+              <li><a class="section-scroll" href="#sponsors">Our Members</a></li>
             </ul>
           </div>
         </div>
@@ -70,108 +65,18 @@ layout: compress
             <div class="font-alt mb-40 titan-title-size-4">Central Wisconsin Innkeepers<br />Careers</div>
 
             <p>Click on any of our member logos to find what they're currently hiring for!</p>
-            <p>
-              Each admission enters you for a chance to win the ultimate lawn and garden package with additional tickets available to purchase to better your chances to win.
-            </p>
-            <a class="section-scroll btn btn-border-w btn-round" target="_blank" href="assets/pdf/Vendor Application Packet.pdf">Vendor Application</a>
+            
+            <a class="section-scroll btn btn-border-w btn-round" target="_blank" href="#sponsors">Our Members</a>
           </div>
         </div>
       </section>
       <div class="main showcase-page">
-        <section class="bg-dark-30 bg-dark-50 bg-dark module-small parallax-bg" data-background="assets/images/grass.jpg" id="sponsors">
+        <section class="bg-dark-30 bg-dark-50 bg-dark module-small parallax-bg" id="sponsors">
           <div class="container">
-            <h1 class="module-title font-alt">Sponsors</h1>
+            <h1 class="module-title font-alt">Members Now Hiring</h1>
             <div class="row multi-columns-row">
               <div class="row text-center">{% for myPage in site.pages %}{% if myPage.dir contains "/sponsors" %}{% if myPage.image != "" %}<div class="col-md-4 col-sm-6 col-xs-12 no-float inline-block vertical-middle"><a target="_blank" class="content-box" href="{{  myPage.link }}"><div class="content-box-image"><img src="{% if myPage.image contains "http" %}{% else %}{{ myPage.dir }}/{% endif %}{{ myPage.image }}" alt="{{ myPage.title }}" class="em-pad"/><h3 class="content-box-title font-serif">{{ myPage.title }}</h3>{{ myPage.content | markdownify }}</div></a></div>{% endif %}{% endif %}{% endfor %}</div>
             </div>
-          </div>
-        </section>
-        <section class="module-small" id="exhibitors">
-          <div class="container">
-            <h1 class="module-title font-alt">Featured Exhibitors</h1>
-            <!--<h2 class="content-box-title font-serif text-center"><a target="_blank" href="assets/pdf/Vendor Application Packet.pdf">Want your logo here? Become A Featured Exhibitor!</a></h2>-->
-              <div class="row multi-columns-row">
-                <div class="row text-center">{% for myPage in site.pages %}{% if myPage.dir contains "/vendors" %}{% if myPage.image != "" %}<div class="col-md-4 col-sm-6 col-xs-12 no-float inline-block vertical-middle"><a target="_blank" class="content-box" href="{{  myPage.link }}"><div class="content-box-image"><img src="{% if myPage.image contains "http" %}{% else %}{{ myPage.dir }}/{% endif %}{{ myPage.image }}" alt="{{ myPage.title }}" class="em-pad"/><h3 class="content-box-title font-serif">{{ myPage.title }}</h3>{{ myPage.content | markdownify }}</div></a></div>{% endif %}{% endif %}{% endfor %}</div>
-              </div>
-              <h2 class="content-box-title font-serif text-center">And More!</h2>
-          </div>
-        </section>
-        <section class="bg-dark-30 bg-dark-50 bg-dark module-small parallax-bg top-bg" data-background="assets/images/hands-holding.jpg" id="about">
-          <div class="container container-front text-center">
-            <h1 class="module-title font-alt">About</h1>
-            <p>
-              The Central Wisconsin Lawn &amp; Garden show welcomes some of Wisconsin's finest professionals specializing in landscaping, lawn design, lawn care, deck and patio building, pool and spa installation, lawn and garden equipment, landscaping equipment, plants, bulbs, and so much more.
-            </p>
-          </div>
-        </section>
-        <section class="module-small" id="seminars">
-          <div class="container text-center">
-            <h1 class="module-title font-alt">Seminars</h1>
-            <p>
-              Seminars will be held throughout
-              the show with topics ranging from
-              how to create your dream garden
-              to lawn equipment demonstrations.
-            </p>
-            <p>As information becomes available, it will be posted here.</p>
-          </div>
-        </section>
-        <section class="bg-dark-30 bg-dark-50 bg-dark module-small parallax-bg top-bg" data-background="assets/images/farmersmarket.jpg" id="farmers">
-          <div class="container container-front text-center">
-            <h1 class="module-title font-alt">Farmers Market</h1>
-            <p>Pickles | Jam | Salsa | Artisan Cheeses | Honey | Olive oil | Tea Greens | Coffee | Plant bulbs | Succulents | Small Garden | Art/Crafts
-              </p>
-            <h3>11AM - 3PM</h3>
-            <h3>$25 for 10x10 Space</h3>
-            <h3>Setup Time: 8:45AM - 10:45AM</h3>
-            <p>Please note that we are only accepting vendors who sell homemade products that are related to lawn/garden/food. <br/> Market vendors may need proof of liscense depending on products being sold</p>
-            <p><a class="section-scroll btn btn-border-w btn-round" href="https://docs.google.com/forms/d/e/1FAIpQLSciSO4d3S8INsPnC8EPKLpmRYYQ0Os8ovsN_Om2LVPePMXmzQ/viewform">Signup Online Today!</a></p>
-            <p><a class="section-scroll btn btn-border-w btn-round" href="assets/pdf/2019FMRegistration.pdf">Download Farmer's Market Registration</a>
-              <a class="section-scroll btn btn-border-w btn-round" href="assets/pdf/FMFlyer.pdf">Download Farmers Market Rules and Regulations</a>
-            </p>
-            
-          </div>
-        </section>
-        <section class="module-small" id="vendors">
-          <div class="container text-center">
-            <h1 class="module-title font-alt">All Vendors</h1>
-            <p>
-             For a list of all of our current vendors check out our facebook page for an up to date listing!
-            </p>
-            <a class="section-scroll btn" href="https://www.facebook.com/events/359887208089200">See All of our amazing Vendors</a>
-          </div>
-        </section>
-        <section class="bg-dark-30 bg-dark-50 bg-dark module-small parallax-bg" data-background="assets/images/orto-in-casa-2000x1200.jpg" id="sign-up">
-          <div class="container container-front">
-            <h1 class="module-title font-alt">Become a Vendor</h1>
-            <h2>Calling all vendors!</h2>
-            <p>The lawn &amp; garden show is back by popular demand and we want <strong>YOU</strong> to be part of it!</p>
-            <h2>Event Details</h2>
-            <p>
-              <strong>Vendor Registration / Check-In / Setup</strong><br />
-              Friday: 9:00AM - 7:00PM
-            </p>
-            <p>
-              <strong>Show Hours</strong><br />
-              Saturday: 10:00AM - 6:00PM<br />
-              Sunday: 10:00AM - 3:00PM
-            </p>
-            <p>
-              <strong>Move Out</strong><br />
-              Sunday: 3:00PM - 7:00PM
-            </p>
-            <h2>Featured Exhibitor</h2>
-            <p><strong>Stand Out to the Crowd!</strong></p>
-            <p>Be a Featured Exhibitor for only an additional price of $250</p>
-            <h2>What is a Featured Exhibitor?</strong></h2>
-            <p>Featured Exhibitors will receive the following:</p>
-            <ul>
-              <li>Logo on all printed advertising</li>
-              <li>Name, description of company, and link to company website listed on the Lawn & Garden website.</li>
-              <li>Oppourtunity to be a seminar speaker</li>
-              <li>4 <strong>FREE</strong> admission tickets</li>
-            </ul>
-            <a class="btn-round" target="_blank" href="assets/pdf/Vendor Application Packet.pdf">Apply Today!</a>
           </div>
         </section>
         <section class="module-extra-small bg-dark">
