fixed layout again

--- a/index.html
+++ b/index.html
@@ -58,6 +58,20 @@ layout: compress
           </div>
         </div>
       </nav>
+      <section class="bg-dark-30 bg-dark showcase-page-header module parallax-bg" data-background="assets/images/innkeepersheader.jpg" id="intro">
+        <div class="titan-caption container">
+          <div class="caption-content">
+            <!--<div class="font-alt mb-30 titan-title-size-1"><img src="assets/images/innkeepersheader.jpg" style="width: 500px" /></div>-->
+            <div class="font-alt mb-40 titan-title-size-4">Central Wisconsin Innkeepers<br />Careers</div>
+
+            <p>Click on any of our member logos to find what they're currently hiring for!</p>
+            
+            <a class="section-scroll btn btn-border-w btn-round" target="_blank" href="#sponsors">Our Members</a>
+          </div>
+        </div>
+      </section>
+      <div class="main showcase-page">
+        
         <section class="module-small" id="exhibitors">
           <div class="container">
             <h1 class="module-title font-alt">Featured Exhibitors</h1>
@@ -79,7 +93,7 @@ layout: compress
               </div>
               <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 text-center">
                     <p>
-                      123 cw drive<br/>
+                      1111 CW LODGING ST<br/>
                       ROTHSCHILD, WI 54474<br/>
                       P: 715-555-5555   F: 715-555-5555
                     </p>
