--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ layout: compress
         
         <section class="module-small" id="exhibitors">
           <div class="container">
-            <h1 class="module-title font-alt">Featured Exhibitors</h1>
+            <h1 class="module-title font-alt">Our Members</h1>
             <!--<h2 class="content-box-title font-serif text-center"><a target="_blank" href="assets/pdf/Vendor Application Packet.pdf">Want your logo here? Become A Featured Exhibitor!</a></h2>-->
               <div class="row multi-columns-row">
                 <div class="row text-center">{% for myPage in site.pages %}{% if myPage.dir contains "/vendors" %}{% if myPage.image != "" %}<div class="col-md-4 col-sm-6 col-xs-12 no-float inline-block vertical-middle"><a target="_blank" class="content-box" href="{{  myPage.link }}"><div class="content-box-image"><img src="{% if myPage.image contains "http" %}{% else %}{{ myPage.dir }}/{% endif %}{{ myPage.image }}" alt="{{ myPage.title }}" class="em-pad"/><h3 class="content-box-title font-serif">{{ myPage.title }}</h3>{{ myPage.content | markdownify }}</div></a></div>{% endif %}{% endif %}{% endfor %}</div>
