--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ layout: compress
 
             <p>Click on any of our member logos to find what they're currently hiring for!</p>
             
-            <a class="section-scroll btn btn-border-w btn-round" target="_blank" href="#sponsors">Our Members</a>
+            <a class="section-scroll btn btn-border-w btn-round" target="_blank" href="#exhibitors">Our Members</a>
           </div>
         </div>
       </section>
