--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: compress
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
-    <title>CW Hotel & Lodging Association</title>
+    <title>CW Hotel & Lodging</title>
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/favicon-16x16.png">
@@ -62,7 +62,7 @@ layout: compress
         <div class="titan-caption container">
           <div class="caption-content">
             <!--<div class="font-alt mb-30 titan-title-size-1"><img src="assets/images/innkeepersheader.jpg" style="width: 500px" /></div>-->
-            <div class="font-alt mb-40 titan-title-size-4">Central Wisconsin Innkeepers<br />Careers</div>
+            <div class="font-alt mb-40 titan-title-size-4">Central Wisconsin Hotel & Lodging<br />Careers</div>
 
             <p>Click on any of our member logos to find what they're currently hiring for!</p>
             
